; ModuleID = '/home/carl/AnghaBench/rofi/source/widgets/extr_listview.c_listview_set_style.c'
source_filename = "/home/carl/AnghaBench/rofi/source/widgets/extr_listview.c_listview_set_style.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STATE_MASK = common dso_local global i32 0, align 4
@URGENT = common dso_local global i32 0, align 4
@ACTIVE = common dso_local global i32 0, align 4
@FMOD_MASK = common dso_local global i32 0, align 4
@listview_theme_prop_names = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @listview_set_style to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @listview_set_style(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @STATE_MASK, align 4
  %8 = and i32 %6, %7
  store i32 %8, i32* %5, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %54

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @URGENT, align 4
  %15 = load i32, i32* @ACTIVE, align 4
  %16 = or i32 %14, %15
  %17 = icmp eq i32 %13, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i32, i32* @ACTIVE, align 4
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %18, %12
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @FMOD_MASK, align 4
  %23 = and i32 %21, %22
  switch i32 %23, label %44 [
    i32 128, label %24
    i32 129, label %34
  ]

24:                                               ; preds = %20
  %25 = load i32*, i32** %3, align 8
  %26 = load i32**, i32*** @listview_theme_prop_names, align 8
  %27 = load i32, i32* %5, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32*, i32** %26, i64 %28
  %30 = load i32*, i32** %29, align 8
  %31 = getelementptr inbounds i32, i32* %30, i64 1
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @widget_set_state(i32* %25, i32 %32)
  br label %54

34:                                               ; preds = %20
  %35 = load i32*, i32** %3, align 8
  %36 = load i32**, i32*** @listview_theme_prop_names, align 8
  %37 = load i32, i32* %5, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i32*, i32** %36, i64 %38
  %40 = load i32*, i32** %39, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 2
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @widget_set_state(i32* %35, i32 %42)
  br label %54

44:                                               ; preds = %20
  %45 = load i32*, i32** %3, align 8
  %46 = load i32**, i32*** @listview_theme_prop_names, align 8
  %47 = load i32, i32* %5, align 4
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i32*, i32** %46, i64 %48
  %50 = load i32*, i32** %49, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 0
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @widget_set_state(i32* %45, i32 %52)
  br label %54

54:                                               ; preds = %11, %44, %34, %24
  ret void
}

declare dso_local i32 @widget_set_state(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
